recursion.cons.lessons.recursion.cons.Remove.scala.error
remove:8: error: not enough arguments for method remove: (l: List[Int], v: Int)List[Int].
Unspecified value parameter v.
		return remove(l.tail)
                             ^remove:10: error: not enough arguments for method remove: (l: List[Int], v: Int)List[Int].
Unspecified value parameter v.
	else return l.head :: remove(l.tail)
                                    ^